# quad_gap

./: CMakeLists.txt  package.xml  qg_plugin.xml
cfg/: CollisionChecker.cfg  qg.cfg
cfg/cpp/quad_gap/: qgConfig.h
config/: potentialgap_local_planner_params.yaml  potentialgap_local_planner_params_holonomic.yaml
include/quad_gap/: GapDetector.h  Planner.h  QuadGapPlanner.h  gap.h  gap_manip.h  gap_trajectory_generator.h  gap_utils.h  goal_selector.h  helper.h  planner.h  potentialgap_config.h  quad_gap.h  robot_geo_parser.h  trajectory_controller.h  trajectory_follower.h  trajectory_scoring.h  visualization.h
include/quad_gap/config/: QuadGapConfig.h
include/quad_gap/gap_detection/: GapDetector.h
include/quad_gap/global_plan_management/: GlobalPlanManager.h
include/quad_gap/trajectory_evaluation/: TrajectoryEvaluator.h  trajectory_scoring.h
include/quad_gap/trajectory_generation/: GapManipulator.h  GapTrajectoryGenerator.h  gap_trajectory_generator.h
include/quad_gap/trajectory_tracking/: trajectory_controller.h
include/quad_gap/utils/: Gap.h  Robot.h  RobotGeometryProcessor.h  RobotGeometryStorage.h  robot_geo_parser.h
include/quad_gap/visualization/: GapVisualizer.h  GoalVisualizer.h  TrajectoryVisualizer.h  Visualizer.h
rviz/: arena.rviz
scripts/: stdr_map_generator.py
src/: GapDetector.cpp  Planner.cpp  QuadGapPlanner.cpp  gap_manip.cpp  gap_trajectory_generator.cpp  gap_utils.cpp  goal_selector.cpp  planner.cpp  potentialgap_config.cpp  quad_gap.cpp  robot_geo_parser.cpp  trajectory_controller.cpp  trajectory_follower.cpp  trajectory_scoring.cpp  visualization.cpp
src/config/: QuadGapConfig.cpp
src/gap_detection/: GapDetector.cpp
src/global_plan_management/: GlobalPlanManager.cpp
src/trajectory_evaluation/: TrajectoryEvaluator.cpp  trajectory_scoring.cpp
src/trajectory_generation/: GapManipulator.cpp  GapTrajectoryGenerator.cpp  gap_manip.cpp  gap_trajectory_generator.cpp
src/trajectory_tracking/: TrajectoryController.cpp  trajectory_controller.cpp
src/utils/: robot_geo_parser.cpp
src/visualization/: GapVisualizer.cpp  GoalVisualizer.cpp  TrajectoryVisualizer.cpp  Visualizer.cpp
